--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/youtube-video-player": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "bootstrap": "^5.2.0",
     "cordova-android": "10.1.2",
-    "cordova-plugin-youtube-video-player": "^2.4.0",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -58,6 +58,7 @@
     "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-youtube-video-player": "^2.4.0",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -84,7 +85,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-youtube-video-player": {}
     },
     "platforms": [
       "browser",
